# cogwheel

./: Cargo.toml  LICENSE  README.md  TODO.md
examples/: .gitignore  deserialize.rs  make.rs
examples/common/: mod.rs  somebasicconfig.json  somebasicconfig.toml  somebasicconfig.yaml
macro/: Cargo.toml
macro/src/: lib.rs
src/: config.rs  lib.rs  sparse.rs
tests/: deserialize.rs  replace.rs
