workspace = { members = ["macro"] }

[package]
name = "cogwheel"
description = "A customizable and unopinionated configuration library."
authors = ["Clover Johnson <clover.johnson@mailfence.com>"]
repository = "https://github.com/callmeclover/cogwheel"
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
cogwheel-macro = { path = "macro" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", optional = true }
serde_yml = { version = "0.0.12", optional = true }
thiserror = "2.0.4"
toml = { version = "0.8.19", optional = true }

[features]
default = ["toml"]
json = ["dep:serde_json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yml"]
