[package]
name = "cogwheel-macro"
description = "Derive macros for the Cogwheel crate."
authors = ["Clover Johnson <clover.johnson@mailfence.com>"]
license = "MIT"
readme = "../README.md"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"
